--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,161 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+form {
   display: flex;
   flex-direction: column;
+  width: 300px;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+div {
+  margin-bottom: 10px;
+}
+
+label {
+  margin-bottom: 5px;
+}
+
+button {
+  color: #f755a1;
+  font-weight: bold;
+  width: 100%;
+  height: 200%;
+  flex: 1;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.loginSuccess {
+  align-items: center;
+}
+
+* {
+  font-family: Arial;
+}
+
+body {
+  background-color: #242424;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  font-size: x-large;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p {
+  font-size: small;
+}
+
+.main {
+  display: block;
+  background-color: yellow;
+  margin: auto;
+  width: 50%;
+  padding: 14px 16px;
+}
+
+.content {
+  background-color: #000000;
+  padding: 10px 20px;
+  max-width: 500px;
+  height: 100px;
+}
+
+.nav ul {
+  display: flex;
+  justify-content: start;
+  list-style: none;
+  padding: 0;
+  width: 75%;
+  margin: auto;
+}
+
+.nav li {
+  font-weight: bold;
+  padding: 20px;
+  flex: 1;
+}
+
+button:hover {
+  background-color: #b5bcff;
+}
+
+.homeText {
+  margin-top: 50px;
+  text-align: center;
+  width: 100%;
+  padding: 200px 0;
+  background-color: rgb(50, 104, 122);
+}
+
+.homeText.h1 {
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+}
+
+.aboutText {
+  margin-top: 50px;
+  text-align: center;
+  width: 100%;
+  padding: 200px 0;
+  background-color: rgb(27, 103, 52);
+}
+
+.contactText {
+  margin-top: 50px;
+  text-align: center;
+  width: 100%;
+  padding: 200px 0;
+  background-color: rgb(85, 27, 27);
+}
+
+.homeBtn {
+  padding: 20px 0;
+  margin:auto;
+  text-align: center;
+  text-decoration: none;
+  color: #f755a1;
+  font-weight: bold;
+  width: 95%;
+  height: 25px;
+  flex: 1;
+  align-items: center;
+  background-color: rgb(255, 255, 255);
+}
+
+.aboutBtn{
+  padding: 20px 0;
+  margin-left: 10px;
+  margin-right: 10px;
+  text-align: center;
+  text-decoration: none;
+  padding-left: 10px;
+  color: #f755a1;
+  font-weight: bold;
+  width: 95%;
+  height: 25px;
+  flex: 1;
+  align-items: center;
+  background-color: white;
+}
+
+.contactBtn{
+  padding: 20px 0;
+  margin:auto;
+  text-align: center;
+  text-decoration: none;
+  padding-left: 10px;
+  color: #f755a1;
+  font-weight: bold;
+  width: 95%;
+  height: 25px;
+  flex: 1;
+  align-items: center;
+  background-color: white;
+}
+
+.successTxt {
+margin: auto;
+text-align: center;
 }
